tests/ShouldFail/bad_end_proof.8pus
Theorem easyimpl1 : forall A : Type, A -> A.
Proof.
    intro a.
    intro x.
    trivial.
Qed.
Theorem easyimpl2 : forall A : Type, A -> A.
Proof.
    intro a.
    intro x.
Qed.
